# rustsploit

./: .gitignore  Cargo.toml  README.md  RELEASE_GITHUB.txt  RELEASE_NOTES.txt  bugs.txt  build.rs  changelog.md  extra.txt  fuzz_api.py  template-api-commands.txt  test_api_modules.sh  test_servers.py  todo.txt
.cargo/: config.toml
.github/workflows/: rust.yml
changelogs/: # --- Constants ---.txt  .changelog-latest.md.kate-swp  changelog-latest.md
changelogs/archives/2025/: changelog.md
changlog/archived/2025/: changelog.md
docs/: API-Server.md  API-Usage-Examples.md  BAD_PATTERNS.md  CLI-Reference.md  Changelog.md  Contributing.md  Credential-Modules-Guide.md  Credits.md  Donation.md  Exploit-Modules-Guide.md  Fast-Pair-WhisperPair-Guide.md  Future-Features.md  Getting-Started.md  Home.md  Interactive-Shell.md  Legacy.md  MCP-Integration.md  Module-Catalog.md  Module-Development.md  Security-Validation.md  Testing-QA.md  Utilities-Helpers.md  audit-report.md  doc.md  readme.md
lists/: about.txt  enum.txt  readme.md  rtsphead.txt
lists/mqtt-defaults/: pass.txt  user.txt
lists/telnet-default/: passwords.txt  usernames.txt
plans/: compile-time-improvement-plan.md
scripts/: audit-bad-patterns.sh  native_migrate.sh  setup_docker.py  setup_stack.py
src/: api.rs  checkpoint.rs  cli.rs  config.rs  context.rs  cred_store.rs  events.rs  exclusions.rs  export.rs  global_options.rs  job_archive.rs  jobs.rs  loot.rs  main.rs  module.rs  module_info.rs  output.rs  pq_channel.rs  pq_middleware.rs  prescan.rs  rate_limit.rs  results_sink.rs  scheduler.rs  shell.rs  spool.rs  tenant.rs  tommy.rs  totp_config.rs  utils.rs  workspace.rs  ws.rs
src/commands/: creds.rs  creds_gen.rs  exploit.rs  exploit_gen.rs  mod.rs  osint.rs  plugins.rs  scanner.rs  scanner_gen.rs
src/mcp/: client.rs  mod.rs  resources.rs  server.rs  tools.rs  types.rs
src/modules/: mod.rs
src/modules/creds/: mod.rs  telnet_bruteforce.rs  utils.rs
src/modules/creds/camera/: mod.rs
src/modules/creds/camxploit/: camxploit.rs  exploit.rs  mod.rs
src/modules/creds/creds/: utils.rs
src/modules/creds/generic/: couchdb_bruteforce.rs  elasticsearch_bruteforce.rs  enablebruteforce.rs  fortinet_bruteforce.rs  ftp_anonymous.rs  ftp_bruteforce.rs  h3c_oem_kvm_bruteforce.rs  h3c_redfish_session_spray.rs  http_basic_bruteforce.rs  imap_bruteforce.rs  l2tp_bruteforce.rs  m365_activesync_spray.rs  memcached_bruteforce.rs  mod.rs  mqtt_bruteforce.rs  mysql_bruteforce.rs  onvif_bruteforce.rs  pop3_bruteforce.rs  postgres_bruteforce.rs  proxy_bruteforce.rs  rdp_bruteforce.rs  redis_bruteforce.rs  rtsp_bruteforce.rs  rtsp_bruteforce_advanced.rs  sample_cred_check.rs  smtp_bruteforce.rs  snmp_bruteforce.rs  ssh_bruteforce.rs  ssh_spray.rs  ssh_user_enum.rs  telnet_bruteforce.rs  telnet_hose.rs  todo.txt  vnc_bruteforce.rs
src/modules/exploits/: AUDIT.md  mod.rs  sample_exploit.rs
src/modules/exploits/abus/: abussecurity_camera_cve202326609variant1.rs  abussecurity_camera_cve202326609variant2.rs  mod.rs
src/modules/exploits/acti/: acm_5611_rce.rs  mod.rs
src/modules/exploits/apache_tomcat/: catkiller_cve_2025_31650.rs  cve_2025_24813_apache_tomcat_rce.rs  mod.rs
src/modules/exploits/avtech/: cve_2024_7029_avtech_camera.rs  mod.rs
src/modules/exploits/bluetooth/: mod.rs  wpair.rs
src/modules/exploits/camera/: abussecurity_camera_cve202326609variant1.rs  abussecurity_camera_cve202326609variant2.rs  cve_2024_7029_avtech_camera.rs  mod.rs  uniview_nvr_pwd_disclosure.rs
src/modules/exploits/cameras/: galayou_g2_rtsp_bypass_cve_2025_9983.rs  mod.rs  xiongmai_xm530.rs
src/modules/exploits/cowrie/: ansi_log_injection.rs  llm_prompt_injection.rs  mod.rs  ssrf_ipv6.rs
src/modules/exploits/crypto/: geth_dos_cve_2026_22862.rs  heartbleed.rs  mod.rs
src/modules/exploits/dionaea/: mod.rs  mqtt_underflow.rs  mssql_dos.rs  mysql_sqli.rs  tftp_crash.rs
src/modules/exploits/dlink/: dlink_dcs_930l_auth_bypass.rs
src/modules/exploits/dos/: apachebrpc_overflow_cve_2025_59789.rs  connection_exhaustion_flood.rs  dns_amplification.rs  http2_rapidreset_cve_2023_44487.rs  http_flood.rs  icmp_flood.rs  memcached_amplification.rs  mod.rs  ntp_amplification.rs  null_syn_exhaustion.rs  px4_uav_dos.rs  rudy.rs  slowloris.rs  ssdp_amplification.rs  syn_ack_flood.rs  tcp_connection_flood.rs  telnet_iac_flood.rs  udp_flood.rs
src/modules/exploits/exim/: exim_etrn_sqli_cve_2025_26794.rs
src/modules/exploits/flowise/: cve_2025_59528_flowise_rce.rs  mod.rs
src/modules/exploits/fortinet/: fortios_auth_bypass_cve_2022_40684.rs  mod.rs  (+4 more)
src/modules/osint/: cert_transparency.rs  cname_chain.rs  jwks_inspector.rs  mod.rs
src/modules/plugins/: mod.rs  sample_plugin.rs
src/modules/scanners/: amplification_scanner.rs  api_endpoint_scanner.rs  asterisk_fingerprint.rs  banner_grabber.rs  cobaltstrike_beacon_scanner.rs  cors_reflection_scanner.rs  cpanel_exposure.rs  csp_audit_scanner.rs  dir_brute.rs  dmarc_check.rs  dns_recursion.rs  h3c_cloudos_api_enum.rs  heartbleed_scanner.rs  honeypot_scanner.rs  http_method_scanner.rs  http_title_scanner.rs  ipmi_enum_exploit.rs  iusb_virtualmedia_probe.rs  jarm_scan.rs  log4j_scanner.rs  m365_userenum_scanner.rs  mod.rs  mysql_exposure.rs  nbns_scanner.rs  php_version_eol.rs  ping_sweep.rs  port_scanner.rs  proxy_scanner.rs  redfish_unauth_enum.rs  redis_scanner.rs  reflect_scanner.rs  s3_bucket_scanner.rs  sample_scanner.rs  security_headers_scanner.rs  sequential_fuzzer.rs  service_scanner.rs  sgbox_siem_recon.rs  sharepoint_doc_harvest.rs  smtp_user_enum.rs  snmp_scanner.rs  (+15 more)
src/native/: async_tls.rs  dos_utils.rs  hex.rs  mod.rs  network.rs  obfuscator_engine.rs  payload_engine.rs  payload_mutator.rs  rdp.rs  url_encoding.rs
src/utils/: bruteforce.rs  creds_helper.rs  cyclic.rs  exploit_helper.rs  mod.rs  modules.rs  network.rs  parallel.rs  privilege.rs  prompt.rs  recog.rs  safe_io.rs  sanitize.rs  target.rs  throttle.rs  tls_fingerprint.rs  wordlist.rs
src/utils/recog_db/: ftp_banners.xml  http_servers.xml  mysql_banners.xml  smtp_banners.xml  ssh_banners.xml
(+443 files in other folders)
