[package]
name = "rustsploit"
version = "0.3.5"
edition = "2024"
build = "build.rs"

[[bin]]
name = "rustsploit"
path = "src/main.rs"

[dependencies]
# Core / General
anyhow = "1.0"
colored = "3.0"                 # newer than 2.0
rand = "0.9"
rustyline = "17.0"
sysinfo = { version = "0.37", features = ["multithread"] }

# CLI & Async runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full", "process", "fs", "io-std", "rt-multi-thread", "macros", "rt"] }

# HTTP & Web
reqwest = { version = "0.13", features = ["json", "cookies", "socks"] }
h2 = "0.4"
http = "1.4"
bytes = "1.11"
tokio-rustls = "0.26"
url = "2.5"
urlencoding = "2.1"
quick-xml = "0.39"
data-encoding = "2.10"
semver = "1.0"

# Crypto & Encoding
aes = "0.8"
cipher = "0.4"
md5 = "0.8"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.1"
base64 = "0.22"

# Networking & Protocols
tokio-socks = "0.5"
socket2 = { version = "0.6", features = ["all"] }
pnet_packet = "0.35"
ipnet = "2.11"
ipnetwork = "0.21"
regex = "1.12"                  # newest listed
which = "8.0"

# FTP
async_ftp = "6.0"
suppaftp = { version = "7.1", features = ["tokio-async-native-tls"] }
native-tls = "0.2"
rustls = "0.23"
webpki-roots = "1.0"

# Telnet
threadpool = "1.8"
crossbeam-channel = "0.5"
telnet = "0.2"
async-stream = "0.3.6"

# SSH
ssh2 = "0.9"
libc = "0.2"

# RDP - removed unused dependency (module uses external xfreerdp/rdesktop commands)
# rdp = "0.12"

# Walkdir (used by telnet module)
walkdir = "2.5"

# WebSocket (Spotube exploit)
tokio-tungstenite = "0.28"

# Futures
futures = "0.3"
futures-util = "0.3"

# JSON & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# API Server (Axum)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1.19", features = ["v4"] }

# DNS
hickory-client = { version = "0.25" }
hickory-proto = "0.25"

# Misc utilities
once_cell = "1.21"
home = "0.5"                   # updated for edition 2024 compatibility
pnet = "0.35"

[build-dependencies]
regex = "1.12"
walkdir = "2.5"

# Dependency overrides to address security warnings in transitive dependencies
# Note: These are warnings (not vulnerabilities) in transitive dependencies
# async-std warning: suppaftp uses async-std internally - waiting for upstream fix
# The other warnings (atomic-polyfill, atty) are resolved by removing unused rdp dependency

# ============================================
# Development profile: Fast incremental builds
# ============================================
[profile.dev]
opt-level = 0          # No optimization for fastest compile
debug = true           # Keep debug symbols
incremental = true     # Enable incremental compilation
split-debuginfo = "unpacked"  # Faster link times

# Optimize dependencies in dev mode (they don't change often)
[profile.dev.package."*"]
opt-level = 2          # Deps are optimized but your code isn't

# ============================================
# Release profile: Maximum performance
# ============================================
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# ============================================
# Custom profile: Fast release builds for testing
# Usage: cargo build --profile fast-release
# ============================================
[profile.fast-release]
inherits = "release"
lto = "thin"           # Faster than fat LTO
codegen-units = 4      # Parallel codegen
